--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -8,6 +8,6 @@
   @vite(['resources/js/app.js'])
 </head>
 <body>
-  <h1> It Works! HURRAY..... </h1>
+  <h1> HELLO WORLD ... It Works! </h1>
 </body>
 </html>
